Fix json trail error

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "cloud-repo-tools": {
     "requiresKeyFile": true,
-    "requiresProjectId": true,
+    "requiresProjectId": true
   },
   "scripts": {
     "start": "node warnoode.js",
